Bottom white space fix

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -71,17 +71,14 @@ a:hover, a:active { cursor: pointer; text-decoration: none; color:black;}
 .App {
   margin: 0;
   padding: 0;
-  width:calc(100% - 1px);
   height: 100vh;
   overflow: hidden;
   background-color: white;
-  scroll-behavior: smooth;
 }
 
 /* Home tab */
 .App .Tab{
   margin: 0;
-  width:calc(100% - 1px);
   height: 100vh;
   position: relative;
   z-index:4;
